# authz-contract

./: .gitignore  Cargo.toml  README.md
src/: contract.rs  msg.rs
src/protos/: CosmosWithdrawDelegationReward.rs  mod.rs
