[package]
name = "authz-contract"
version = "0.1.0"
authors = ["Keyne"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
protobuf = "3.2.0"
thiserror = "1.0.40"
cosmwasm-std = { version = "1.2.6", features = ["stargate"] }
cw2 = "1.0.1"
cw-storage-plus = "1.1.0"
cosmwasm-schema = "1.2.6"
